# pcl_test

./: .gitignore  CMakeLists.txt  README.md
config/: scp_config.yaml
src/: icp.cc  scp.cc
